<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/defaultImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@null"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/color_theme_white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tooltipToastButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tooltipToastButton"
        style="@style/AppTheme.PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/tooltip_toast_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/defaultImage" />

    <Button
        android:id="@+id/tooltipAlertDialogButton"
        style="@style/AppTheme.PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/tooltip_alert_dialog_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tooltipToastButton" />

    <Button
        android:id="@+id/tooltipLoadingDialogButton"
        style="@style/AppTheme.PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/tooltip_loading_dialog_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tooltipAlertDialogButton" />

    <Button
        android:id="@+id/tooltipSheetDialogButton"
        style="@style/AppTheme.PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/tooltip_sheet_dialog_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tooltipLoadingDialogButton" />


</android.support.constraint.ConstraintLayout>